# plataforma_agendamento

./: .env  Comandos úties.txt  README.md  db.sqlite3  manage.py  pyproject.toml
api/: views.py
appointments/: models.py  tasks.py  urls.py  views.py
appointments/migrations/: 0001_initial.py  0002_initial.py  0003_appointment_token_alter_appointment_service.py
authentication/: urls.py
authentication/templates/: auth.html
pages/templates/: index-model.html
plataforma_agendamento/: __init__.py  asgi.py  calery.py  email.py  settings.py  urls.py  wsgi.py
plataforma_agendamento/templates/: email.html
plataforma_agendamento/templates/email/: appointments_confirm.html
register/: models.py  urls.py  views.py
register/migrations/: 0001_initial.py  0002_customuser_username.py
register/templates/email/: user_reset_password.html
send_email/: urls.py  views.py
static/css/: style.css
