[tool.poetry]
name = "plataforma-agendamento"
version = "0.1.0"
description = ""
authors = ["eduardoValle <luizeduardovalle@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.6"
djangorestframework-simplejwt = "^5.3.1"
drf-yasg = "^1.21.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
