[tool.poetry]
name = "plataforma-agendamento"
version = "0.1.0"
description = ""
authors = ["eduardoValle <luizeduardovalle@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.6"
djangorestframework-simplejwt = "^5.3.1"
drf-yasg = "^1.21.7"
python-decouple = "^3.8"
setuptools = "^70.1.0"
distribute = "^0.7.3"
celery = "^5.4.0"
django-celery-results = "^2.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
